--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -15,6 +16,7 @@
 
 @theme {
   --font-raleway: "Raleway", sans-serif;
+  --font-great-vibes: "Great Vibes", cursive;
 }
 
 @media (prefers-color-scheme: dark) {
